BB-16094: Long words German edition break the page layout - fix attachment item

--- a/src/Oro/Bundle/AttachmentBundle/Resources/public/css/scss/attachment.scss
+++ b/src/Oro/Bundle/AttachmentBundle/Resources/public/css/scss/attachment.scss
@@ -65,6 +65,7 @@
         .filename {
             padding: 0;
             flex-shrink: 1;
+            flex-grow: 0;
 
             @include text-line-truncate(auto);
         }
